pass payload to rfq.html as url param

--- a/ext-app/src/html/rfq.html
+++ b/ext-app/src/html/rfq.html
@@ -11,6 +11,6 @@
     <script type="text/javascript" src="rfq.bundle.js" charset="utf-8"></script>
 </head>
 <body>
-    <h1>RFQ page</h1>
+    <p id="summary-label"></p>
 </body>
 </html>
