display received json data in rfq page

--- a/ext-app/src/html/rfq.html
+++ b/ext-app/src/html/rfq.html
@@ -12,5 +12,7 @@
 </head>
 <body>
     <p id="summary-label"></p>
+    <p>Message Text: <span id="message-text"></span></p>
+    <p>Received data: <span id="received-data"></span></p>
 </body>
 </html>
