--- a/ext-app/src/html/rfq.html
+++ b/ext-app/src/html/rfq.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <script src="https://cdn.jsdelivr.net/npm/socket.io-client@2/dist/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
     <title>RFQ</title>
     
     <script type="text/javascript" src="rfq.bundle.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="rfq.css" />
 </head>
 <body>
     <p id="summary-label"></p>
