send reply to extension app when server receives message

--- a/ext-app/src/html/rfq.html
+++ b/ext-app/src/html/rfq.html
@@ -9,11 +9,12 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
     <title>RFQ</title>
-    
+
     <script type="text/javascript" src="rfq.bundle.js" charset="utf-8"></script>
     <link rel="stylesheet" href="rfq.css" />
 </head>
 <body>
+    <div class="disable-overlay hidden"></div>
     <p id="summary-label"></p>
     <p>Message Text: <span id="message-text"></span></p>
     <p>Received data: <span id="received-data"></span></p>
